--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -4,6 +4,11 @@ body {
   font-size: 0.8rem;
 }
 
+.container,
+.container-fluid {
+  min-height: 60vh;
+}
+
 @mixin center {
   display: flex !important;
   align-items: center !important;
