feat: admin home banner

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -12,4 +12,5 @@ $enable-shadows: false;
 @import './line-awesome/css/line-awesome.min.css';
 @import './slick/slick.scss';
 @import 'gotop';
+@import 'pintura';
 @import 'custom';
