--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -110,8 +110,8 @@ input,
 }
 
 .form-control.form-control-solid {
-  background-color: #f5f8fa;
-  border-color: #f5f8fa;
+  background-color: #fcfcfc;
+  border-color: #eeeeee;
   color: black;
   transition: color 0.2s ease, background-color 0.2s ease;
   font-size: 0.85rem;
