--- a/styles/app.scss
+++ b/styles/app.scss
@@ -8,9 +8,11 @@ $enable-shadows: false;
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 @import '~bootstrap/scss/bootstrap';
 @import '~animate.css/animate.min.css';
+@import '~froala-editor/css/froala_style.min.css';
 @import './font-awesome/css/all.min.css';
 @import './line-awesome/css/line-awesome.min.css';
 @import './slick/slick.scss';
 @import 'gotop';
 @import 'pintura';
+@import 'froala';
 @import 'custom';
