--- a/styles/app.scss
+++ b/styles/app.scss
@@ -9,6 +9,7 @@ $enable-shadows: false;
 @import '~bootstrap/scss/bootstrap';
 @import '~animate.css/animate.min.css';
 @import '~froala-editor/css/froala_style.min.css';
+@import '~react-loading-skeleton/dist/skeleton.css';
 @import './font-awesome/css/all.min.css';
 @import './line-awesome/css/line-awesome.min.css';
 @import './slick/slick.scss';
