--- a/src/_styles/_froala.scss
+++ b/src/_styles/_froala.scss
@@ -5117,8 +5117,8 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   border: 0;
 }
 
-.fr-view img.fr-rounded,
-.fr-view .fr-img-caption.fr-rounded img {
+img.fr-rounded,
+.fr-img-caption.fr-rounded img {
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -5127,25 +5127,25 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   background-clip: padding-box;
 }
 
-.fr-view img.fr-shadow,
-.fr-view .fr-img-caption.fr-shadow img {
+img.fr-shadow,
+.fr-img-caption.fr-shadow img {
   -webkit-box-shadow: 10px 10px 5px 0px #cccccc;
   -moz-box-shadow: 10px 10px 5px 0px #cccccc;
   box-shadow: 10px 10px 5px 0px #cccccc;
 }
 
-.fr-view img.fr-bordered,
-.fr-view .fr-img-caption.fr-bordered img {
+img.fr-bordered,
+.fr-img-caption.fr-bordered img {
   border: solid 5px #ccc;
 }
 
-.fr-view img.fr-bordered {
+img.fr-bordered {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
-.fr-view .fr-img-caption.fr-bordered img {
+.fr-img-caption.fr-bordered img {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -5154,48 +5154,48 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
 .fr-view {
   word-wrap: break-word;
 }
-.fr-view span[style~='color:'] a {
+span[style~='color:'] a {
   color: inherit;
 }
-.fr-view strong {
+strong {
   font-weight: 700;
 }
-.fr-view table {
+table {
   border: none;
   border-collapse: collapse;
   empty-cells: show;
   max-width: 100%;
 }
-.fr-view table td {
+table td {
   min-width: 5px;
 }
-.fr-view table.fr-dashed-borders td,
-.fr-view table.fr-dashed-borders th {
+table.fr-dashed-borders td,
+table.fr-dashed-borders th {
   border-style: dashed;
 }
-.fr-view table.fr-alternate-rows tbody tr:nth-child(2n) {
+table.fr-alternate-rows tbody tr:nth-child(2n) {
   background: whitesmoke;
 }
-.fr-view table td,
-.fr-view table th {
+table td,
+table th {
   border: 1px solid #ddd;
 }
-.fr-view table td:empty,
-.fr-view table th:empty {
+table td:empty,
+table th:empty {
   height: 20px;
 }
-.fr-view table td.fr-highlighted,
-.fr-view table th.fr-highlighted {
+table td.fr-highlighted,
+table th.fr-highlighted {
   border: 1px double red;
 }
-.fr-view table td.fr-thick,
-.fr-view table th.fr-thick {
+table td.fr-thick,
+table th.fr-thick {
   border-width: 2px;
 }
-.fr-view table th {
+table th {
   background: #ececec;
 }
-.fr-view hr {
+hr {
   clear: both;
   user-select: none;
   -o-user-select: none;
@@ -5206,15 +5206,15 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   break-after: always;
   page-break-after: always;
 }
-.fr-view .fr-file {
+.fr-file {
   position: relative;
 }
-.fr-view .fr-file::after {
+.fr-file::after {
   position: relative;
   content: '\1F4CE';
   font-weight: normal;
 }
-.fr-view pre {
+pre {
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow: visible;
@@ -5232,28 +5232,28 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
 .fr-view[dir='rtl'] blockquote blockquote blockquote {
   border-color: #43a047;
 }
-.fr-view blockquote {
+blockquote {
   border-left: solid 2px #5e35b1;
   margin-left: 0;
   padding-left: 5px;
   color: #5e35b1;
 }
-.fr-view blockquote blockquote {
+blockquote blockquote {
   border-color: #00bcd4;
   color: #00bcd4;
 }
-.fr-view blockquote blockquote blockquote {
+blockquote blockquote blockquote {
   border-color: #43a047;
   color: #43a047;
 }
-.fr-view span.fr-emoticon {
+span.fr-emoticon {
   font-weight: normal;
   font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'NotoColorEmoji', 'Segoe UI Symbol',
     'Android Emoji', 'EmojiSymbols';
   display: inline;
   line-height: 0;
 }
-.fr-view span.fr-emoticon.fr-emoticon-img {
+span.fr-emoticon.fr-emoticon-img {
   background-repeat: no-repeat !important;
   font-size: inherit;
   height: 1em;
@@ -5265,24 +5265,24 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   line-height: 1;
   vertical-align: middle;
 }
-.fr-view .fr-text-gray {
+.fr-text-gray {
   color: #aaa !important;
 }
-.fr-view .fr-text-bordered {
+.fr-text-bordered {
   border-top: solid 1px #222;
   border-bottom: solid 1px #222;
   padding: 10px 0;
 }
-.fr-view .fr-text-spaced {
+.fr-text-spaced {
   letter-spacing: 1px;
 }
-.fr-view .fr-text-uppercase {
+.fr-text-uppercase {
   text-transform: uppercase;
 }
-.fr-view .fr-class-highlighted {
+.fr-class-highlighted {
   background-color: #ffff00;
 }
-.fr-view .fr-class-code {
+.fr-class-code {
   border-color: #cccccc;
   border-radius: 2px;
   -moz-border-radius: 2px;
@@ -5294,28 +5294,28 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   padding: 10px;
   font-family: 'Courier New', Courier, monospace;
 }
-.fr-view .fr-class-transparency {
+.fr-class-transparency {
   opacity: 0.5;
 }
-.fr-view img {
+img {
   position: relative;
   max-width: 100%;
 }
-.fr-view img.fr-dib {
+img.fr-dib {
   margin: 5px auto;
   display: block;
   float: none;
   vertical-align: top;
 }
-.fr-view img.fr-dib.fr-fil {
+img.fr-dib.fr-fil {
   margin-left: 0;
   text-align: left;
 }
-.fr-view img.fr-dib.fr-fir {
+img.fr-dib.fr-fir {
   margin-right: 0;
   text-align: right;
 }
-.fr-view img.fr-dii {
+img.fr-dii {
   display: inline-block;
   float: none;
   vertical-align: bottom;
@@ -5323,35 +5323,35 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   margin-right: 5px;
   max-width: calc(100% - (2 * 5px));
 }
-.fr-view img.fr-dii.fr-fil {
+img.fr-dii.fr-fil {
   float: left;
   margin: 5px 5px 5px 0;
   max-width: calc(100% - 5px);
 }
-.fr-view img.fr-dii.fr-fir {
+img.fr-dii.fr-fir {
   float: right;
   margin: 5px 0 5px 5px;
   max-width: calc(100% - 5px);
 }
-.fr-view span.fr-img-caption {
+span.fr-img-caption {
   position: relative;
   max-width: 100%;
 }
-.fr-view span.fr-img-caption.fr-dib {
+span.fr-img-caption.fr-dib {
   margin: 5px auto;
   display: block;
   float: none;
   vertical-align: top;
 }
-.fr-view span.fr-img-caption.fr-dib.fr-fil {
+span.fr-img-caption.fr-dib.fr-fil {
   margin-left: 0;
   text-align: left;
 }
-.fr-view span.fr-img-caption.fr-dib.fr-fir {
+span.fr-img-caption.fr-dib.fr-fir {
   margin-right: 0;
   text-align: right;
 }
-.fr-view span.fr-img-caption.fr-dii {
+span.fr-img-caption.fr-dii {
   display: inline-block;
   float: none;
   vertical-align: bottom;
@@ -5359,85 +5359,85 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   margin-right: 5px;
   max-width: calc(100% - (2 * 5px));
 }
-.fr-view span.fr-img-caption.fr-dii.fr-fil {
+span.fr-img-caption.fr-dii.fr-fil {
   float: left;
   margin: 5px 5px 5px 0;
   max-width: calc(100% - 5px);
 }
-.fr-view span.fr-img-caption.fr-dii.fr-fir {
+span.fr-img-caption.fr-dii.fr-fir {
   float: right;
   margin: 5px 0 5px 5px;
   max-width: calc(100% - 5px);
 }
-.fr-view .fr-video {
+.fr-video {
   text-align: center;
   position: relative;
 }
-.fr-view .fr-video.fr-rv {
+.fr-video.fr-rv {
   padding-bottom: 56.25%;
   padding-top: 30px;
   height: 0;
   overflow: hidden;
 }
-.fr-view .fr-video.fr-rv > iframe,
-.fr-view .fr-video.fr-rv object,
-.fr-view .fr-video.fr-rv embed {
+.fr-video.fr-rv > iframe,
+.fr-video.fr-rv object,
+.fr-video.fr-rv embed {
   position: absolute !important;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
-.fr-view .fr-video > * {
+.fr-video > * {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   max-width: 100%;
   border: none;
 }
-.fr-view .fr-video.fr-dvb {
+.fr-video.fr-dvb {
   display: block;
   clear: both;
 }
-.fr-view .fr-video.fr-dvb.fr-fvl {
+.fr-video.fr-dvb.fr-fvl {
   text-align: left;
 }
-.fr-view .fr-video.fr-dvb.fr-fvr {
+.fr-video.fr-dvb.fr-fvr {
   text-align: right;
 }
-.fr-view .fr-video.fr-dvi {
+.fr-video.fr-dvi {
   display: inline-block;
 }
-.fr-view .fr-video.fr-dvi.fr-fvl {
+.fr-video.fr-dvi.fr-fvl {
   float: left;
 }
-.fr-view .fr-video.fr-dvi.fr-fvr {
+.fr-video.fr-dvi.fr-fvr {
   float: right;
 }
-.fr-view a.fr-strong {
+a.fr-strong {
   font-weight: 700;
 }
-.fr-view a.fr-green {
+a.fr-green {
   color: green;
 }
-.fr-view .fr-img-caption {
+.fr-img-caption {
   text-align: center;
 }
-.fr-view .fr-img-caption .fr-img-wrap {
+.fr-img-caption .fr-img-wrap {
   padding: 0;
   margin: auto;
   text-align: center;
   width: 100%;
 }
-.fr-view .fr-img-caption .fr-img-wrap a {
+.fr-img-caption .fr-img-wrap a {
   display: block;
 }
-.fr-view .fr-img-caption .fr-img-wrap img {
+.fr-img-caption .fr-img-wrap img {
   display: block;
   margin: auto;
   width: 100%;
 }
-.fr-view .fr-img-caption .fr-img-wrap > span {
+.fr-img-caption .fr-img-wrap > span {
   margin: auto;
   display: block;
   padding: 5px 5px 10px;
@@ -5453,9 +5453,9 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   width: 100%;
   text-align: center;
 }
-.fr-view button.fr-rounded,
-.fr-view input.fr-rounded,
-.fr-view textarea.fr-rounded {
+button.fr-rounded,
+input.fr-rounded,
+textarea.fr-rounded {
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -5463,13 +5463,13 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
 }
-.fr-view button.fr-large,
-.fr-view input.fr-large,
-.fr-view textarea.fr-large {
+button.fr-large,
+input.fr-large,
+textarea.fr-large {
   font-size: 24px;
 }
-.fr-view ul,
-.fr-view ol {
+ul,
+ol {
   list-style-position: unset;
 }
 
@@ -5486,7 +5486,7 @@ a.fr-view.fr-green {
 /**
  * Link style.
  */
-img.fr-view {
+img {
   position: relative;
   max-width: 100%;
 }
@@ -5523,7 +5523,7 @@ img.fr-view.fr-dii.fr-fir {
   max-width: calc(100% - 5px);
 }
 
-span.fr-img-caption.fr-view {
+span.fr-img-caption {
   position: relative;
   max-width: 100%;
 }
@@ -5557,5 +5557,10 @@ span.fr-img-caption.fr-view.fr-dii.fr-fil {
 span.fr-img-caption.fr-view.fr-dii.fr-fir {
   float: right;
   margin: 5px 0 5px 5px;
+  max-width: calc(100% - 5px);
+}
+img.fr-dii.fr-fil {
+  float: left;
+  margin: 5px 5px 5px 0;
   max-width: calc(100% - 5px);
 }
